--- a/vivacidade/app.json
+++ b/vivacidade/app.json
@@ -2,6 +2,10 @@
   "expo": {
     "name": "vivacidade",
     "slug": "vivacidade",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "platforms": ["ios", "android", "web"],  
+    "web": {
+      "bundler": "metro" 
+    }
   }
 }
