--- a/vivacidade/package.json
+++ b/vivacidade/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "axios": "^1.8.3",
     "cors": "^2.8.5",
-    "expo": "~52.0.39",
     "expo-status-bar": "~2.0.1",
     "express": "^4.21.2",
     "metro": "^0.82.0",
+    "mysql2": "^3.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -24,7 +25,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native-community/cli": "latest"
+    "@react-native-community/cli": "latest",
+    "@types/react": "~18.3.12",
+    "expo": "^52.0.39",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
